# ostest

./: .gitignore  1.txt  2.txt  Cargo.toml  a.txt  b.txt  config.toml.temp  test.c
.arceos/: 1.patch  Cargo.toml  Makefile
.arceos/api/arceos_posix_api/: features.h
.arceos/api/arceos_posix_api/src/: lib.rs
.arceos/api/arceos_posix_api/src/imp/: fd_ops.rs  fs.rs  io.rs  net.rs  path_link.rs  pipe.rs  stdio.rs  time.rs
.arceos/modules/axconfig/src/: lib.rs
.arceos/modules/axfs/src/: dev.rs  fops.rs  mounts.rs  root.rs
.arceos/modules/axfs/src/fs/: fatfs.rs  lwext4_rust.rs
.arceos/modules/axhal/src/arch/x86_64/: mod.rs  trap.rs
.arceos/modules/axhal/src/platform/riscv64_qemu_virt/: console.rs
.arceos/modules/axmm/src/: aspace.rs
.arceos/modules/axmm/src/backend/: linear.rs
.arceos/modules/axnet/: Cargo.toml
.arceos/modules/axnet/src/: lib.rs
.arceos/modules/axnet/src/smoltcp_impl/: addr.rs  bench.rs  dns.rs  listen_table.rs  loopback.rs  mod.rs  tcp.rs  udp.rs
.arceos/modules/axtask/src/: wait_queue.rs
.arceos/scripts/make/: qemu.mk
.github/workflows/: classroom.bak  classroom.yml
.github/workflows/setup-musl/: action.yml
.github/workflows/setup-qemu/: action.yml
api/: Cargo.toml
api/src/: lib.rs  ptr.rs
api/src/imp/: mod.rs  net.rs  signal.rs  sys.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  fs.rs  io.rs  mod.rs  path.rs  poll.rs  stat.rs  status.rs
api/src/imp/mm/: brk.rs  mmap.rs
api/src/imp/net/: mod.rs  socket.rs  socketaddr.rs
api/src/imp/task/: clone.rs  execve.rs  exit.rs  futex.rs  mod.rs  resource.rs  schedule.rs  signal.rs  thread.rs  wait.rs
api/src/imp/utils/: mod.rs  time.rs
api/src/interface/: mod.rs
api/src/interface/fs/: io.rs  mod.rs  path.rs  poll.rs  stat.rs
api/src/interface/mm/: shm.rs
api/src/interface/task/: clone.rs  execve.rs  exit.rs  mod.rs  resource.rs
api/src/interface/user/: identity.rs
api/src/utils/: hash.rs  mod.rs  time.rs
apps/oscomp/: judge_libctest.py  testcase_list  testcase_list.all  testcase_list.initrc
core/: Cargo.toml
core/src/: entry.rs  lib.rs  mm.rs  process.rs  resource.rs  shared_memory.rs  task.rs
process/: Cargo.toml
process/src/: lib.rs  process.rs  process_group.rs  session.rs  thread.rs
scripts/: config.toml.temp
scripts/make/: oscomp.mk
src/: main.rs  mm.rs  syscall.rs
syscall_trace/: Cargo.toml
syscall_trace/src/: lib.rs
