[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axsync.workspace = true
axtask.workspace = true
axsignal.workspace = true
axalloc.workspace = true
axio.workspace = true
axnet.workspace = true
arceos_posix_api.workspace = true

axerrno.workspace = true
bitflags.workspace = true
linkme.workspace = true
memory_addr.workspace = true
linux-raw-sys.workspace = true

starry-core.workspace = true
syscall-trace.workspace = true
undefined-process.workspace = true

macro_rules_attribute = "0.2"
num_enum = { version = "0.7", default-features = false }
static_assertions = "1.1"
spin = "0.10.0"
bit_field = "0.10.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
