[package]
name = "starry-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true
axsignal.workspace = true
arceos_posix_api.workspace = true
undefined-process.workspace = true
linux-raw-sys.workspace = true

axerrno.workspace = true
bitflags.workspace = true
linkme.workspace = true
memory_addr.workspace = true

crate_interface = "0.1"
kernel-elf-parser = { git = "https://github.com/eternalcomet/kernel_elf_parser", branch = "patch-1" }
numeric-enum-macro = "0.2"
percpu = "0.2.0"
spin = "0.10.0"
xmas-elf = "0.9"
num_enum = { version = "0.7.3", default-features = false }

